@@ -1,5 +1,6 @@
 package com.hawkins.m3Utoolsjpa.network;
 
+import java.net.URI;
 import java.net.URL;
 
 import com.hawkins.dmanager.util.StringUtils;
@@ -13,7 +14,7 @@ public class ParsedURL {
 
 	public static ParsedURL parse(String urlString) {
 		try {
-			URL url = new URL(urlString);
+			URL url = new URI(urlString).toURL();
 			ParsedURL parsedURL = new ParsedURL();
 			parsedURL._url = urlString;
 			parsedURL.host = url.getHost();
